# ParallelFrameProcessing

./: .gitignore  CMakeLists.txt  README.txt
src/: FastModule.cpp  FastModule.h  FrameCapture.cpp  FrameCapture.h  Journal.cpp  Journal.h  Module.cpp  Module.h  SlowModule.cpp  SlowModule.h  main.cpp
